--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "data:import": "node src/seeder -import",
+    "data:delete": "node src/seeder -delete"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
