--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,9 @@
-FROM node:8-alpine
-
-EXPOSE 5000
-
-ARG NODE_ENV
-ENV NODE_ENV $NODE_ENV
-
+FROM node:14
+ENV NODE_ENV=production
 RUN mkdir /app
 WORKDIR /app
 ADD package.json yarn.lock /app/
 RUN yarn --pure-lockfile
 ADD . /app
-
-CMD ["yarn", "docker:start"]
+EXPOSE 5000
+CMD ["yarn", "start"]
