--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "data:import": "node src/seeder -import",
     "data:delete": "node src/seeder -delete"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -26,5 +27,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.7"
   }
 }
